# lemmy-moderation-dashboard

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
compose/: dev.yml
lemmy_moderation_dashboard/apps/core/: models.py
lemmy_moderation_dashboard/services/base/: settings.py
